...
  static const String homeTab = 'الرئيسية';
  static const String homeTabEn = 'Home';

  static const String relativesTab = 'الأقارب';
  static const String relativesTabEn = 'Relatives';

  static const String statisticsTab = 'الإحصائيات';
  static const String statisticsTabEn = 'Statistics';

  static const String settingsTab = 'الإعدادات';
  static const String settingsTabEn = 'Settings';

  static const String profileTab = 'الملف الشخصي';
...
